# kiss_slam

./: .gitignore  README.md  pyproject.toml  readme.mdd
docs/: 00_GETTING_STARTED.md  01_REPO_TOUR.md  02_SIMULATOR_AND_WORLD.md  03_MOTION_MODEL.md  04_MEASUREMENT_MODEL.md  05_DATA_ASSOCIATION.md  06_EKF_SLAM_CORE.md  07_VISUALIZATION.md  08_TUNING_AND_DEBUGGING.md  09_USING_IN_REAL_ROBOT.md  ARCHITECTURE.md  CONFIG_TUNING.md  EXTENDING.md  FILE_TREE.md  USAGE_IN_ROBOT.md
examples/: 00_sanity_check_imports.py  01_world_generation.py  02_simulator_controls.py  03_motion_model_only.py  04_measurement_model_only.py  05_data_association_demo.py  06_ekf_predict_only.py  07_ekf_update_single_landmark.py  08_ekf_slam_small_world.py  09_full_ekf_slam_live.py  _example_utils.py  ekf_slam_demo.py  ekf_slam_walkthrough.ipynb  tutorial_00_minimal_slam.py  tutorial_01_repo_tour.py  tutorial_02_simulator_world.py  tutorial_03_motion_model.py  tutorial_04_measurement_model.py  tutorial_05_data_association.py  tutorial_06_ekf_core.py  tutorial_07_visualization.py  tutorial_08_tuning_debugging.py  tutorial_09_robot_integration_stub.py
notebooks/: README.md  _TEMPLATE_THEORY_NOTEBOOK.md  _notebook_utils.py  ntbk-01-gaussians-and-uncertainty.ipynb  ntbk-02-multivariate-gaussians-covariance.ipynb  ntbk-03-covariance-ellipses-and-geometry.ipynb  ntbk-04-linearization-and-taylor-approx.ipynb  ntbk-05-jacobians-for-robotics.ipynb  ntbk-06-ekf-core-ideas-predict-update.ipynb  ntbk-07-ekf-2d-tracking-example.ipynb  ntbk-08-ekf-consistency-nis-nees.ipynb  ntbk-zero-to-hero-kiss-slam.ipynb  (+7 more)
(+24 files in other folders)
